[project]
name = "tg-toolkit"
version = "0.1.0"
description = "Minimal Telegram technical toolkit bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.1.1",
]
